syntax = "proto3";

package example;

service Example {
  // Unary RPC
  rpc GetName(GetNameRequest) returns (GetNameResponse) {}
  // Server streaming RPC
  rpc StreamMessages(StreamMessagesRequest) returns (stream StreamMessagesResponse) {}
  // Client streaming RPC
  rpc EmitMessages(stream EmitMessagesRequest) returns (EmitMessagesResponse) {}
  // Bidirectional streaming RPC
  rpc Chat(stream ChatRequest) returns (stream ChatResponse) {}
}

message GetNameRequest {
  string id = 1;
}

message GetNameResponse {
  string name = 1;
}

message StreamMessagesRequest {
  string id = 1;
}

message StreamMessagesResponse {
  string message = 1;
}

message EmitMessagesRequest {
  string message = 1;
}

message EmitMessagesResponse {
  uint32 messages_processed = 1;
}

message ChatRequest {
  string message = 1;
  string user_id = 2;
}

message ChatResponse {
  string message = 1;
  string user_id = 2;
}
